fixed global hero spacing on mobile screens

--- a/assets/css/modules/global-hero.css
+++ b/assets/css/modules/global-hero.css
@@ -1,7 +1,7 @@
 .hero {
 	position: relative;
 	height: 20vh;
-	min-height: 300px;
+	min-height: 350px;
 	display: flex;
 	align-items: center;
 	justify-content: center;
